--- a/ExcellentWork.html
+++ b/ExcellentWork.html
@@ -12,18 +12,18 @@
     <body>
         <div>
             <div style="height: 10%;width: 100%;margin: auto;">
-                <img src="../img/09.png" style="width: 5%; height: 40%;">
+                <img src="09.png" style="width: 5%; height: 40%;">
                 <input type="search" placeholder="搜索栏" style="width: 80%; height: 40px;">
             </div>
             <br>
             <div style="height: 30%; width: 80%;">
-                <img src="../img/01.png" style="height: 200px; width: 400px;">
+                <img src="01.png" style="height: 200px; width: 400px;">
             </div>
             <br><br>
             <div style="height: 30%; width: 100%;">
-                <img src="../img/02.png" style="height: 180px; width: 180px;">
+                <img src="02.png" style="height: 180px; width: 180px;">
                 &nbsp;&nbsp;
-                <img src="../img/03.png" style="height: 180px; width: 180px;">
+                <img src="03.png" style="height: 180px; width: 180px;">
             </div >
             <br><br>
             <div style="height: 30%; width: 100%;">
@@ -35,7 +35,7 @@
             </div >
             <br><br>
             <div style="height: 30%; width: 80%; border: 2px black;">
-                <img src="../img/10.png" style="height: 200px; width: 400px;">
+                <img src="10.png" style="height: 200px; width: 400px;">
             </div>
         </div>
     </body>
