--- a/ExcellentWork.html
+++ b/ExcellentWork.html
@@ -17,7 +17,7 @@
             </div>
             <br>
             <div style="height: 30%; width: 80%;">
-                <img src="01.png" style="height: 200px; width: 400px;">
+                <img src="https://github.com/wanglingxuan/-/blob/681fbb0264688a44745cb45687848cbdf1316c6a/01.png" style="height: 200px; width: 400px;">
             </div>
             <br><br>
             <div style="height: 30%; width: 100%;">
